tools/tree-sitter-nova/grammar.js
    source_file: $ => repeat($._top_level),

    // Top-level prefers declaration constructs; we lift `prec` on the
    // declaration variants so the parser disambiguates `let` at module
    // scope from `let` inside a block.
    _top_level: $ => choice(
      prec(1, $.fn_decl),
      prec(1, $.extern_fn_decl),
      prec(1, $.import_decl),
      prec(1, $.struct_decl),
      prec(1, $.enum_decl),
      prec(1, $.const_decl),
      prec(1, $.cognitive_decl),    // mind / soul / system
      $._statement,        // includes let, if, while, for, asm, expr
    ),

    // Cognitive-DSL `mind`/`soul`/`system` declarations. R10-era
    // experimental syntax used by examples/*_demo.nova files.
    // We keep the grammar permissive — these are user-defined
    // declarative records with named sections; the compiler lowers
    // them into a series of runtime calls via a macro pass.
    enum_decl: $ => seq(
      'enum',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      '{',
      optional($.enum_variant_list),
      '}',
    ),

    enum_variant_list: $ => seq(
      $.enum_variant,
      // Variants may be separated by `,` or by nothing (newline). The
      // R17A reference test_sum_types.nova writes them on consecutive
      // lines without a trailing comma.
      repeat(seq(optional(','), $.enum_variant)),
      optional(','),
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(field('payload', $.enum_variant_payload)),
    ),

    enum_variant_payload: $ => seq(
      '(',
      commaSep1($.type_expression),
      ')',
    ),

    // R21A / R22B / R23A: shared `<T, U>` type-parameter syntax for
    // enum decls, struct decls, and fn decls.
    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      '>',
    ),

    type_parameter: $ => field('name', $.identifier),

    // -----------------------------------------------------------------
    // Declarations
    // -----------------------------------------------------------------

    import_decl: $ => seq(
      'import',
      field('path', $.string_literal),
      optional(';'),
    ),

    // `const NAME = value` — a compile-time constant. Permitted at both
    // top-level and inside fn bodies.
    extern_fn_decl: $ => seq(
      'extern',
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      '(',
      field('parameters', optional($.parameter_list)),
      ')',
      optional(seq(choice('->', ':'), field('return_type', $.type_expression))),
      optional(';'),
    ),

    fn_decl: $ => seq(
      'fn',
      // Method-style decl `fn Type.method(self, ...)` — captured by
      // letting the name be a single identifier OR a `Type.method`
      // chain. The compiler folds this into a `Type.method` builtin.
      field('name', choice($.identifier, $.qualified_fn_name)),
      // R22B: optional `<T, U>` type-parameter list.
      optional(field('type_parameters', $.type_parameters)),
      '(',
      field('parameters', optional($.parameter_list)),
      ')',
      // Optional `-> Type` return-type annotation (R9E). NOVA also
      // accepts the legacy `: Type` spelling for forward compatibility
      // with older sources (cf. R22B test_generic_fn `legacy_add`).
      optional(seq(choice('->', ':'), field('return_type', $.type_expression))),
      field('body', $.block),
    ),

    // `fn Type.method(self, ...)` method-binding head — R12-era feature
    // still used widely in tests/examples (test_struct_methods.nova).
    parameter_list: $ => commaSepTrail($.parameter),

    parameter: $ => seq(
      field('name', $.identifier),
      // Optional `: Type` annotation, currently unused by the compiler
      // but allowed by the LSP-facing syntax.
      optional(seq(':', field('type', $.type_expression))),
      // Optional default-value: `fn greet(name, times = 1)`.
      optional(seq('=', field('default', $._expression))),
    ),

    // -----------------------------------------------------------------
    // Type expressions — bare ident, generic `T<U, V>`, qualified
    // `Type::Variant`, or function type `T -> U`. R22B extends this
    // with `T -> U` so `f: T -> U` parses inside a parameter list.
    // -----------------------------------------------------------------
    type_expression: $ => choice(
      $.function_type,
      $._simple_type,
    ),

    _simple_type: $ => choice(
      // Plain `T`, `int`, `MyType`...
      $.identifier,
      // Generic: `Result<int, str>`, `Box<T>`, `Result<Result<int, str>, str>`.
      $.generic_type,
      // Path: `Result::Ok`, `Option::None`.
      $.path_qualified_type,
    ),

    generic_type: $ => prec(1, seq(
      field('base', $.identifier),
      '<',
      commaSep1($.type_expression),
      '>',
    )),

    struct_decl: $ => seq(
      'struct',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      '{',
      optional($.struct_field_list),
      '}',
    ),

    struct_field_list: $ => seq(
      $.struct_field,
      // R23A also accepts `;` or nothing (newline) as a field separator
      // alongside `,`. test_struct_methods.nova has each field on its
      // own line with no punctuation.
      repeat(seq(optional(choice(',', ';')), $.struct_field)),
      optional(choice(',', ';')),
    ),

    struct_field: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expression))),
    ),

    // R14-era multi-binding let: `let a, b = expr, expr`. Also
    // covers single-binding let, optionally with a type annotation,
    // and the R13 destructure form `let [a, b, ...rest] = expr`.
    // Single-binding `let x = expr` keeps the legacy CST shape:
    //   (let_decl name: (identifier) value: (...))
    // Multi-binding adds extra `(identifier)` siblings under the
    // `name` field. Destructure swaps `name` for `pattern`.
    let_decl: $ => seq(
      'let',
      choice(
        seq(
          field('name', $.identifier),
          optional(seq(':', field('type', $.type_expression))),
          repeat(seq(',', field('name', $.identifier))),
          '=',
          field('value', choice($._expression, $._expression_list)),
        ),
        seq(
          field('pattern', $.list_pattern),
          '=',
          field('value', $._expression),
        ),
        // R25A: `let Point { x: px, y: py } = p` — struct destructure
        // pattern at let head. Dynamic precedence picks this over the
        // single-name reading when the identifier is followed by a
        // `{` and field-init-like contents.
        prec.dynamic(20, seq(
          field('pattern', $.struct_pattern),
          '=',
          field('value', $._expression),
        )),
        // R32D: `let Pair(a, b) = pair`, `let Some(Some(v)) = nested`,
        // `let Ok(Point { x, y }) = res`. The variant-pattern branch
        // sits at the same dynamic-precedence (20) as struct_pattern
        // so the parser commits to it over the fall-through call-
        // expression reading. Path-qualified variants
        // (`Result::Ok(v)`) and bare-identifier variants (`Some(v)`)
        // share this branch via `variant_pattern`'s own grammar.
        prec.dynamic(20, seq(
          field('pattern', $.variant_pattern),
          '=',
          field('value', $._expression),
        )),
      ),
      optional(';'),
    ),

    _expression_list: $ => prec.right(seq(
      $._expression,
      repeat1(seq(',', $._expression)),
    )),

    // -----------------------------------------------------------------
    // asm { "..." "..." }
    // -----------------------------------------------------------------

    asm_block: $ => seq(
      'asm',
      '{',
      repeat($.string_literal),
      '}',
    ),

    // -----------------------------------------------------------------
    // Statements
    // -----------------------------------------------------------------

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.let_decl,                  // `let` may appear inside a block
      $.const_decl,
      $.if_statement,
      $.if_let_statement,          // R33C: `if let PAT = expr { ... }`
      $.while_statement,
      $.do_while_statement,
      $.for_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.asm_block,
      $.impl_block,
      $.labeled_statement,         // `@label while ...`
      $.assignment_statement,
      $.expression_statement,
      $.block,                     // bare block is a valid statement
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      optional(seq(
        'else',
        field('alternative', choice($.block, $.if_statement)),
      )),
    )),

    // R33C: `if let PAT = expr { ... } [else { ... } | else if ... | else if let ...]`.
    // The pattern slot reuses `_pattern` from match arms, so every
    // R31D / R32D pattern shape that works at match-arm head also
    // works at if-let head: wildcards, variant patterns (incl. nested
    // payload binders), struct patterns, and bare literal / identifier
    // patterns. `prec.right` resolves the dangling-else chain in favour
    // of the closest preceding `if` / `if let`, matching the compiler's
    // recursive-descent parser. The else branch may chain to another
    // if-let, a plain if-stmt, or a bare block.
    while_statement: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
      // R15-era `else` clause on while that runs when the loop exits
      // normally (no `break`). Present in test_while_else.nova.
      optional(seq('else', field('else_branch', $.block))),
    ),

    // `do { ... } while cond` — at-least-once loop
    // (test_ternary_dowhile.nova).
    for_statement: $ => seq(
      'for',
      field('binding', choice(
        $.identifier,
        seq($.identifier, ',', $.identifier),   // `for i, x in list`
      )),
      'in',
      field('iterable', $._expression),
      field('body', $.block),
      optional(seq('else', field('else_branch', $.block))),
    ),

    // `return` is right-associative w.r.t. its optional value so that
    // `return (a + b)` parses as `return <expr>` rather than
    // `return ; (a+b)` followed by a stray expression.
    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
      optional(';'),
    )),

    // `break` / `continue` may take:
    //   * an optional `@label` target (`break @outer`),
    //   * an optional `if cond` guard (`break if i > 5`,
    //     `break @outer if inner > 2`).
    // Combined form `break @label if cond` is used in
    // test_break_continue_if.nova.
    break_statement: $ => prec.right(seq(
      'break',
      optional(field('target', $.label)),
      optional(seq('if', field('condition', $._expression))),
      optional(';'),
    )),
    continue_statement: $ => prec.right(seq(
      'continue',
      optional(field('target', $.label)),
      optional(seq('if', field('condition', $._expression))),
      optional(';'),
    )),

    // Top-level `expr` is a statement. We distinguish assignment from
    // expression so the CST highlights LHS as an l-value. The LHS can
    // also be a comma-separated list for multi-assign (`a, b = b, a`).
    assignment_statement: $ => prec.right(seq(
      field('lhs', choice($._expression, $._expression_list)),
      field('operator', choice(
        // Basic assignment + arithmetic combos.
        '=', '+=', '-=', '*=', '/=', '%=',
        // Bitwise compounds — token wrappers needed because the lexer
        // would otherwise prefer the binary `<<` / `>>` / etc. for the
        // first two chars.
        token(prec(2, '**=')),
        token(prec(2, '&=')),
        token(prec(2, '|=')),
        token(prec(2, '^=')),
        token(prec(2, '<<=')),
        token(prec(2, '>>=')),
        // Logical/nullish compound — same lexer trick.
        token(prec(2, '??=')),
        token(prec(2, '||=')),
        token(prec(2, '&&=')),
      )),
      field('rhs', choice($._expression, $._expression_list)),
      optional(';'),
    )),

    expression_statement: $ => seq(
      $._expression,
      optional(';'),
    ),

    // -----------------------------------------------------------------
    // Expressions
    // -----------------------------------------------------------------

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.ternary_expression,
      // R20A: postfix `?` Result-propagation.
      $.try_propagate_expression,
      // `expr @ score` confidence annotation.
      $.confidence_expression,
      // `...iter` spread, used in calls and list literals.
      $.spread_expression,
      // R15-era `if cond { a } else { b }` as expression.
      $.if_expression,
      // R33C: `if let PAT = expr { ... } else { ... }` as expression.
      $.if_let_expression,
      $.match_expression,
      $.lambda_expression,
      $.call_expression,
      // R25A: `Point { x: 1, y: 2 }` brace-init. Sits at call-level
      // precedence so `Point { x: 1 }.x` field-access chains work.
      $.struct_init_expression,
      $.index_expression,
      $.slice_expression,
      $.field_expression,
      $.parenthesized_expression,
      $.path_expression,        // R17A: `Type::Variant` constructor base
      $.list_literal,
      $.map_literal,
      $.map_comprehension,
      $.list_comprehension,
      $.number,
      $.float,
      $.string_literal,
      $.boolean,
      $.none_literal,
      $.identifier,
    ),

    // Anonymous function: `fn(x, y) { ... }`
    lambda_expression: $ => seq(
      'fn',
      '(',
      field('parameters', optional($.parameter_list)),
      ')',
      optional(seq(choice('->', ':'), field('return_type', $.type_expression))),
      field('body', $.block),
    ),

    // R15-era `if cond { ... } else { ... }` used in expression
    // position. We model it explicitly so the CST can distinguish
    // an if-as-statement from an if-as-expression at editor level.
    match_expression: $ => seq(
      'match',
      field('scrutinee', $._expression),
      '{',
      repeat($.match_arm),
      '}',
    ),

    match_arm: $ => prec.dynamic(100, seq(
      field('pattern', $._pattern),
      // Optional `if cond` guard: `_ if x > 0 => ...`.
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('value', choice($._expression, $.block)),
      optional(','),
    )),

    _pattern: $ => choice(
      $.wildcard_pattern,
      // `is int` / `is str` type patterns. Higher dynamic precedence
      // so the parser prefers it over starting a new binary `value is T`.
      $.is_pattern,
      // R17A destructure pattern: `Option::Some(v)`, `Shape::Rect(w, h)`,
      // `Tree::Leaf(x)`.
      $.variant_pattern,
      // R25A: `Point { x: 0, y: 0 }`, `Point { x, y }`,
      // `Point { x: 7, y: _ }`. Sits at higher dynamic precedence than
      // the generic `_expression` fallback so a `Type { ... }` arm
      // resolves to struct_pattern, not struct_init_expression.
      $.struct_pattern,
      // Other patterns: bare literal / identifier / path constructor
      // with no binders. We re-use the expression rule so number/string
      // literals and `Option::None` (no parens) all parse as patterns.
      $._expression,
    ),

    _variant_binder: $ => choice(
      $.variant_pattern,
      $.struct_pattern,
      $.identifier,
      $.wildcard_pattern,
    ),

    wildcard_pattern: $ => '_',

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    try_propagate_expression: $ => prec.dynamic(1, prec(PREC.ternary, seq(
      field('value', $._expression),
      '?',
    ))),
