tools/tree-sitter-nova/test/corpus/literals.txt
================================================================================
escape sequences in string literal
================================================================================

let s = "tab\there\nnewline\\backslash"

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
hex escape sequence
================================================================================

let s = "\x41\x42\x43"

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
string interpolation with ${expr}
================================================================================

let g = "hello ${name}!"

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (string_literal
      (interpolation
        (identifier)))))

================================================================================
numeric underscores
================================================================================

let big = 1_000_000
let mask = 0xFF_FF
let bits = 0b1010_1010

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (number))
  (let_decl
    name: (identifier)
    value: (number))
  (let_decl
    name: (identifier)
    value: (number)))

================================================================================
empty list literal
================================================================================

let xs = []

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (list_literal)))

================================================================================
nested list literal
================================================================================

let grid = [[1, 2], [3, 4]]

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (list_literal
      (list_literal
        (number)
        (number))
      (list_literal
        (number)
        (number)))))

================================================================================
none literal
================================================================================

let x = none

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (none_literal)))
